# AppendixB

./: .gitmodules  Makefile  README.md
Example11.5/: CMakeLists.txt  mass_sum.c
Example12.1/: StreamTriad.cu
Example15.2/: Preprocess_batch.sh  Preprocess_then_restart.sh
Example15.3/: batch_simple_error.sh
Example4.1/: triangularallocation.c
Example4.2/: CMakeLists.txt  fortranallocation.c  malloc2Dfort.h
Example7.1/: vecadd.c
Example7.2/: CMakeLists.txt  max_reduction.c
Example7.3/: main.c  max_reduction.c  max_reduction.h
ExerciseB.12.2/SumReductionRevealed/: SumReductionRevealed.c
ExerciseB.12.3/: CMakeLists.txt  Makefile  SumReduction.cu
ExerciseB.12.4/: StreamTriad.cc
ExerciseB.12.5/: Setup_Raja.sh  StreamTriad.cc
ExerciseB.15.2/: Preprocess_then_restart.sh
ExerciseB.15.3/: batch_error.sh
ExerciseB.4.1/: CMakeLists.txt  malloc2Dtri.c  malloc2Dtri.h
ExerciseB.4.2/: malloc2Dfort.c
ExerciseB.7.1/: CMakeLists.txt
ExerciseB.7.2/: main.c
ExerciseB.7.3/: CMakeLists.txt
ExerciseB.8.7/: Makefile
ExerciseB.8.7/Improved/: CartExchange.cc
